<resources>
    <string name="app_name">1.2PersonaHelper</string>
    <string name="clock_icon_name">таймер</string>
    <string name="button" />
    <string name="todo">TODO</string>
    <string name="planer_new_task">new task</string>
    <string name="planer_ic_name">ПЛАНЕР</string>
    <string name="start">start</string>
    <string name="timer_time_to_work"> work (min)</string>
    <string name="timer_time_to_rest"> rest (min)</string>
    <string name="time">Time</string>
    <string name="stop">Stop</string>
    <string name="default_notification_channel_id">task</string>
</resources>